--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 </div> 
 
                 <div class="user-input-box">
+                    <label for="username">Full Username</label>
+                    <input type="text" id="username" name="username" placeholder="Enter Full Username">
+                </div>
+
+                <div class="user-input-box">
                     <label for="email">Email</label>
                     <input type="text" id="email" name="email" placeholder="Enter Email">
                 </div> 
